[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Traps/VergilTrap.gd" type="Script" id=1]
[ext_resource path="res://Videos/I-am-the-storm-edit.ogv" type="VideoStream" id=2]
[ext_resource path="res://Shaders/screen_tint.tres" type="Material" id=3]
[ext_resource path="res://Shaders/glitch.tres" type="Material" id=4]
[ext_resource path="res://Shaders/uv/lensDistortion.gd" type="Script" id=5]
[ext_resource path="res://godot.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Traps/dmc_trap_vignentte.png" type="Texture" id=7]
[ext_resource path="res://Sounds/You shall die.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Kid got slashed.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/sword slashes.wav" type="AudioStream" id=10]

[sub_resource type="VisualShaderNodeTexture" id=1]
source = 5

[sub_resource type="VisualShaderNodeInput" id=2]
input_name = "screen_uv"

[sub_resource type="VisualShaderNodeCustom" id=3]
default_input_values = [ 1, 1.0 ]
initialized = true
script = ExtResource( 5 )

[sub_resource type="VisualShaderNodeScalarUniform" id=4]
uniform_name = "ScalarUniform"
hint = 1
min = -2.0
max = 2.0
default_value_enabled = true
default_value = -0.3

[sub_resource type="VisualShaderNodeInput" id=5]
input_name = "screen_texture"

[sub_resource type="VisualShaderNodeScalarConstant" id=6]

[sub_resource type="VisualShader" id=7]
code = "shader_type canvas_item;
uniform float ScalarUniform : hint_range(-2, 2) = -0.3;


// LensDistortionUV

vec2 lensD1st0rti0nFunc(vec2 _uv_d1s_1en5, float _fctr_d1s_1en5){
	vec2 _p0s_d1s_1en5 = _uv_d1s_1en5 - 0.5;
	float _d1st_d1s_1en5 = length(_p0s_d1s_1en5);
	if (_fctr_d1s_1en5 > 0.0) // fisheye / barrel
		_uv_d1s_1en5 = vec2(0.5)+normalize(_p0s_d1s_1en5)*tan(_d1st_d1s_1en5*_fctr_d1s_1en5)*0.70711/tan(0.70711*_fctr_d1s_1en5);
	else if (_fctr_d1s_1en5 < 0.0) // antifisheye / pincushion
		_uv_d1s_1en5 = vec2(0.5)+normalize(_p0s_d1s_1en5)*atan(_d1st_d1s_1en5*-_fctr_d1s_1en5*10.0)*0.5/atan(-_fctr_d1s_1en5*0.5*10.0);
	return _uv_d1s_1en5;
}


void vertex() {
// Output:0

}

void fragment() {
// Input:3
	vec3 n_out3p0 = vec3(SCREEN_UV, 0.0);

// ScalarUniform:5
	float n_out5p0 = ScalarUniform;

// LensDistortionUV:4
	vec3 n_out4p0;
	{
		n_out4p0.xy = lensD1st0rti0nFunc(n_out3p0.xy, n_out5p0);
	}

// Scalar:7
	float n_out7p0 = 0.000000;

// Input:6

// Texture:2
	vec3 n_out2p0;
	float n_out2p1;
	{
		vec4 SCREEN_TEXTURE_tex_read = textureLod(SCREEN_TEXTURE, n_out4p0.xy, n_out7p0);
		n_out2p0 = SCREEN_TEXTURE_tex_read.rgb;
		n_out2p1 = SCREEN_TEXTURE_tex_read.a;
	}

// Output:0
	COLOR.rgb = n_out2p0;
	COLOR.a = n_out2p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -752.481, 32.0615 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 280, 140 )
nodes/fragment/2/node = SubResource( 1 )
nodes/fragment/2/position = Vector2( 0, 80 )
nodes/fragment/3/node = SubResource( 2 )
nodes/fragment/3/position = Vector2( -680, 180 )
nodes/fragment/4/node = SubResource( 3 )
nodes/fragment/4/position = Vector2( -340, 160 )
nodes/fragment/5/node = SubResource( 4 )
nodes/fragment/5/position = Vector2( -700, 340 )
nodes/fragment/6/node = SubResource( 5 )
nodes/fragment/6/position = Vector2( -340, 380 )
nodes/fragment/7/node = SubResource( 6 )
nodes/fragment/7/position = Vector2( -340, 260 )
nodes/fragment/connections = PoolIntArray( 3, 0, 4, 0, 5, 0, 4, 1, 4, 0, 2, 0, 6, 0, 2, 2, 7, 0, 2, 1, 2, 0, 0, 0, 2, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/ScalarUniform = -0.12

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 18.5, 19 )

[node name="VergilTrap" type="Position2D"]
script = ExtResource( 1 )

[node name="ScreenFX" type="CanvasLayer" parent="."]
visible = false

[node name="GodotIcon" type="TextureRect" parent="ScreenFX"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="Vignette" type="TextureRect" parent="ScreenFX"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="ScreenTint" type="ColorRect" parent="ScreenFX"]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackBufferCopy" type="BackBufferCopy" parent="ScreenFX"]
copy_mode = 2

[node name="Glitch" type="ColorRect" parent="ScreenFX"]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.576471, 0.462745, 0.462745, 1 )

[node name="BackBufferCopy2" type="BackBufferCopy" parent="ScreenFX"]
copy_mode = 2

[node name="AntiFisheye" type="ColorRect" parent="ScreenFX"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SwordSlashes" type="CanvasLayer" parent="."]
layer = 2
visible = false
follow_viewport_enable = true

[node name="VideoLayer" type="CanvasLayer" parent="."]
layer = 3
visible = false

[node name="VideoPlayer" type="VideoPlayer" parent="VideoLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 2 )

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
self_modulate = Color( 1, 0.301961, 0.941176, 1 )
shape = SubResource( 9 )

[node name="YouShallDieSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SwordSlashesSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="KidSlashedSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -6.199

[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="finished" from="YouShallDieSfx" to="." method="_on_YouShallDieSfx_finished"]
